--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
 
-https://shiftedtime.stratum.it {
-	reverse_proxy 147.182.145.126:9000
-}
+##https://shiftedtime.stratum.it {
+##	reverse_proxy 147.182.145.126:9000
+##}
